[gd_scene load_steps=7 format=2]

[ext_resource path="res://Prefabs/Enemies/Hazards/Rock/rock.png" type="Texture" id=1]
[ext_resource path="res://Prefabs/Enemies/Hazards/ImmobileHazard.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 34.2857, 19.8571 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform vec4 line_color : hint_color = vec4(1.0);
uniform float line_thickness : hint_range(0, 10) = 1.0;

const vec2 OFFSETS[8] = {
	vec2(-1, -1), vec2(-1, 0), vec2(-1, 1), vec2(0, -1), vec2(0, 1), 
	vec2(1, -1), vec2(1, 0), vec2(1, 1)
};

void fragment() {
	vec2 size = TEXTURE_PIXEL_SIZE * line_thickness;
	float outline = 0.0;
	
	for (int i = 0; i < OFFSETS.length(); i++) {
		outline += texture(TEXTURE, UV + size * OFFSETS[i]).a;
	}
	outline = min(outline, 1.0);
	
	vec4 color = texture(TEXTURE, UV);
	COLOR = mix(color, line_color, outline - color.a);
}"

[sub_resource type="ShaderMaterial" id=5]
shader = SubResource( 4 )
shader_param/line_color = Color( 0.0627451, 0.0627451, 0.0627451, 1 )
shader_param/line_thickness = 0.5

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 14.2857, 480.714 )

[node name="Area2D" type="Area2D"]
scale = Vector2( 0.8, 0.8 )
collision_layer = 2
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -8.51495e-07, 14.1429 )
shape = SubResource( 2 )
disabled = true

[node name="Sprite" type="Sprite" parent="."]
material = SubResource( 5 )
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 31.4286, 34.2857, 34.2857, 22.8571, 34.2857, 20, 25.7143, 20, 14.2857, 2.85714, -11.4286, -5.71429, -34.2857, 20, -25.7143, 34.2857 )

[node name="PointsArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PointsArea"]
position = Vector2( 51.4286, -445 )
shape = SubResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="PointsArea" to="." method="_on_PointsArea_area_entered"]
